# GameQuoridor

./: CMakeLists.txt  FileStructure  README.md
UI/: Makefile  gui  signin.cpp  signup  signup.cpp
client/: Client  Client.cpp  GameManager.cpp  GameManager.hpp  Makefile  MessageHandler.hpp  NetworkUtilsClient.cpp  NetworkUtilsClient.hpp  client
client/controller/: LoginController.cpp  LoginController.h
client/message/: MessageHandler.hpp
client/message/lobbyscrmess/: LogoutMessage.hpp  MatchPlayerRequestMessage.hpp
client/model/: User.cpp  User.h
client/network/: ClientNetwork.cpp  ClientNetwork.h
client/object/: ObjectManager.hpp
client/ui/: GameScreen.hpp  LobbyScreen.hpp  LoginScreen.hpp  UIManager.cpp  UIManager.hpp
client/view/: LoginUI.cpp  LoginUI.h  testSignUP  testSignUP.cpp
server/: Client  Makefile  NetworkUtilsServer.cpp  NetworkUtilsServer.hpp  Server.cpp
server/message/: Message.cpp  Message.h  MessageType.hpp
server/message/gamescrmess/: WallPlacementMessage.hpp
server/message/lobbyscrmess/: MatchLogRequestMessage.hpp  UserInfoRequestMessage.hpp
server/message/loginscrmess/: LoginMessage.hpp  RegisterMessage.hpp
server/network/: ServerNetwork.cpp  ServerNetwork.h
src/: Main.cpp
src/client/: Client.cpp  Client.hpp
src/common/: Message.hpp
src/game/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp
src/server/: Server.cpp  Server.hpp
